--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "less": "^3.10.3",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
@@ -19,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js ./src",
+    "lint-fix": "eslint --fix --ext .js ./src",
+    "less": "lessc ./src/pagination.less ./src/pagination.css"
   },
   "eslintConfig": {
     "extends": "react-app"
